--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -140,8 +140,34 @@
         "all":"All",
         "selected":"Selected",
         "noMatchFoundMessage":"No items match your selection",
-        "notFoundAddMessage":"Not found what you were looking for? You can also add your search term('{{ searchedTerm }}') to the list.",
-        "addToList":"Add to list"    
+        "notFoundAddMessage":"Not found what you were looking for? You can also add your search term({{ searchedTerm }}) to the list.",
+        "addToList":"Add to list",    
+        "rating" : "Rating: ",
+        "ratingMessage": "Please rate your skills from 1 (not good) to 5 (excellent).",   
+        "searchItemErrorMessage": " cannot be added because it is already part of the list or it is not a valid name.",
+        "searchAllertHeader": "Add to list",
+        "searchAllertMessage": "Do you really want to add {{searchTerm}} to the list?",
+        "LANGUAGE_ITEMS": [
+            "Arabic",
+            "Chinese",
+            "Czech",
+            "English",
+            "Finnish",
+            "French",
+            "German",
+            "Greek",
+            "Hungarian",
+            "Italian",
+            "Japanese",
+            "Korean",
+            "Norwegian",
+            "Polish",
+            "Portuguese",
+            "Russian",
+            "Spanish",
+            "Swedish",
+            "Turkish"
+  ]
     },
     "sideMenu":{
         "progress":"Progress",
