--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -165,7 +165,7 @@
             "Portugisisch",
             "Russisch",
             "Spanisch",
-            "Swedisch",
+            "Schwedisch",
             "Türkisch"
   ]
     },
