Language header added

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -16,7 +16,8 @@
     "homePage":{
         "welcomeMessage":"Willkommen bei Consileon",
         "welcomeTagline":"Wir machen den Unterschied",
-        "applyNow":"Jetzt Bewerben"
+        "applyNow":"Jetzt Bewerben",
+        "language":"Sprache"
     },
     "formsPage":{
         "submit":"Bestätigen",
