--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -16,7 +16,8 @@
     "homePage":{
         "welcomeMessage":"Welcome to Consileon",
         "welcomeTagline":"We make the difference",
-        "applyNow":"Apply Now"
+        "applyNow":"Apply Now",
+        "language":"Language"
     },
     "formsPage":{
         "submit":"Submit",
