Add business skills to the key competencies

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -138,6 +138,7 @@
         "title":"Kompetenzen",
         "stepDescription":"Bitte wähle und bewerte nun deine Kompetenzen. Wir erwarten von dir, dass du mindestens einen Eintrag unter dem Reiter 'Sprachen' hinzufügst, um diesen Schritt abzuschließen.",
         "languages":"Sprachen",
+        "businessSkills":"Unternehmerische Fähigkeiten",
         "professionalSoftware":"Software Kenntnisse",
         "database":"Datenbank Kenntnisse",
         "programmingLanguagesAndFrameworks":"Programmiersprachen und Frameworks",
