Improve the language files for the key competencies step

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -135,23 +135,23 @@
         "fillMandatoryFieldsToSubmitMessage":"Du kannst das Formular abschicken, sobald du alle Pflichtfelder ausgefüllt hast. Wenn du das rechte Menü öffnest, kannst du sehen, wo du noch einige Daten eingeben musst."
     },
     "keyCompetencies":{
-        "title":"Kompetenzen",
-        "stepDescription":"Bitte wähle und bewerte nun deine Kompetenzen. Wir erwarten von dir, dass du mindestens einen Eintrag unter dem Reiter 'Sprachen' hinzufügst, um diesen Schritt abzuschließen.",
-        "languages":"Sprachen",
-        "businessSkills":"Unternehmerische Fähigkeiten",
-        "professionalSoftware":"Software Kenntnisse",
-        "database":"Datenbank Kenntnisse",
-        "programmingLanguagesAndFrameworks":"Programmiersprachen und Frameworks",
-        "all":"Alle",
-        "selected":"Ausgewählt",
-        "noMatchFoundMessage":"Es wurde Kein passender Eintrag gefunden",
-        "notFoundAddMessage":"Nicht gefunden was du gesucht hast. Du kannst auch deinen Suchbegriff ('{{ searchedTerm }}') in die Liste aufnehmen.",
-        "addToList":"Zur Liste hinzufügen",
+        "title": "Kompetenzen",
+        "stepDescription": "Bitte wähle und bewerte nun Deine Kompetenzen. Wir erwarten von Dir, dass Du mindestens einen Eintrag unter \"Sprachen\" hinzufügst, um diesen Schritt abzuschließen.",
+        "languages": "Sprachen",
+        "businessSkills": "Unternehmerische Fähigkeiten",
+        "professionalSoftware": "Software-Kenntnisse",
+        "database": "Datenbank-Kenntnisse",
+        "programmingLanguagesAndFrameworks": "Programmiersprachen und Frameworks",
+        "all": "Alle",
+        "selected": "Ausgewählt",
+        "noMatchFoundMessage": "Es wurde kein passender Eintrag gefunden",
+        "notFoundAddMessage": "Nicht gefunden, wonach Du gesucht hast? Du kannst auch Deinen Suchbegriff (\"{{ searchedTerm }}\") in die Liste aufnehmen.",
+        "addToList": "Zur Liste hinzufügen",
         "rating": "Bewertung: ",
-        "ratingMessage": "Bitte bewerte deine Fertigkeiten von 1 (nicht gut) bis 5 (exzellent).",
-        "searchItemErrorMessage": "'{{searchedTerm}}' kann nicht hinzugefügt werden, weil es entweder bereits in der Liste vorhanden oder kein gültiger Name ist.",
-        "searchAlertMessage": "Willst du wirklich '{{searchedTerm}}' zur Liste hinzufügen?",
-        "addedToListMessage":"'{{searchedTerm}}' wurde der Liste hinzugefügt."
+        "ratingMessage": "Bitte bewerte Deine Fähigkeiten von 1 (nicht gut) bis 5 (exzellent).",
+        "searchItemErrorMessage": "\"{{searchedTerm}}\" kann nicht hinzugefügt werden, weil es entweder bereits in der Liste vorhanden oder kein gültiger Name ist.",
+        "searchAlertMessage": "Willst Du wirklich \"{{searchedTerm}}\" zur Liste hinzufügen?",
+        "addedToListMessage":"\"{{searchedTerm}}\" wurde der Liste hinzugefügt."
     },
     "additionalInfo":{
         "title":"Zusätzliche Information",
