--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -135,23 +135,23 @@
         "fillMandatoryFieldsToSubmitMessage":"You can submit the form as soon as you have filled out all required fields. By opening the right menu, you can see where you still need to enter some data."
     },
     "keyCompetencies":{
-        "title":"Key Competencies",
-        "stepDescription":"Now, please select and rate your key competencies. We expect you to add at least one entry to 'Languages' in order to complete this step.",
-        "languages":"Languages",
-        "businessSkills":"Business Skills",
-        "professionalSoftware":"Professional Software",
-        "database":"Databases",
-        "programmingLanguagesAndFrameworks":"Programming Languages and Frameworks",
-        "all":"All",
-        "selected":"Selected",
-        "noMatchFoundMessage":"No items match your selection",
-        "notFoundAddMessage":"Not found what you were looking for? You can also add your search term({{ searchedTerm }}) to the list.",
-        "addToList":"Add to list",    
-        "rating" : "Rating: ",
+        "title": "Key Competencies",
+        "stepDescription": "Now, please select and rate your key competencies. We expect you to add at least one entry to \"Languages\" in order to complete this step.",
+        "languages": "Languages",
+        "businessSkills": "Business Skills",
+        "professionalSoftware": "Professional Software",
+        "database": "Databases",
+        "programmingLanguagesAndFrameworks": "Programming Languages and Frameworks",
+        "all": "All",
+        "selected": "Selected",
+        "noMatchFoundMessage": "No items match your selection",
+        "notFoundAddMessage": "Not found what you were looking for? You can also add your search term (\"{{ searchedTerm }}\") to the list.",
+        "addToList": "Add to list",    
+        "rating": "Rating: ",
         "ratingMessage": "Please rate your skills from 1 (not good) to 5 (excellent).",   
-        "searchItemErrorMessage": "'{{searchedTerm}}' cannot be added because it is already part of the list or it is not a valid name.",
-        "searchAlertMessage": "Do you really want to add '{{searchedTerm}}' to the list?",
-        "addedToListMessage":"'{{searchedTerm}}' has been added to the list."
+        "searchItemErrorMessage": "\"{{searchedTerm}}\" cannot be added because it is already part of the list or it is not a valid name.",
+        "searchAlertMessage": "Do you really want to add \"{{searchedTerm}}\" to the list?",
+        "addedToListMessage": "\"{{searchedTerm}}\" has been added to the list."
     },
 
     "additionalInfo":{
