--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -151,7 +151,40 @@
         "ratingMessage": "Please rate your skills from 1 (not good) to 5 (excellent).",   
         "searchItemErrorMessage": "\"{{searchedTerm}}\" cannot be added because it is already part of the list or it is not a valid name.",
         "searchAlertMessage": "Do you really want to add \"{{searchedTerm}}\" to the list?",
-        "addedToListMessage": "\"{{searchedTerm}}\" has been added to the list."
+        "addedToListMessage": "\"{{searchedTerm}}\" has been added to the list.",
+        "languageItems": [
+            "Arabic",
+            "Chinese",
+            "Czech",
+            "English",
+            "Finnish",
+            "French",
+            "German",
+            "Greek",
+            "Hungarian",
+            "Italian",
+            "Japanese",
+            "Korean",
+            "Norwegian",
+            "Polish",
+            "Portuguese",
+            "Russian",
+            "Spanish",
+            "Swedish",
+            "Turkish"
+        ],
+        "businessSkillsItems": [
+            "Project Management",
+            "SCRUM",
+            "Accounting & Finance",
+            "Controlling",
+            "Production",
+            "Human Resources",
+            "Marketing",
+            "Sales",
+            "Purchasing and Logistics",
+            "Process Design"
+        ]
     },
 
     "additionalInfo":{
